# atwinc1500-rs-examples

./: .gitignore  README.md
pi_pico/: Cargo.toml
pi_pico/examples/: blinky.rs  chip_info.rs  connect.rs  led.rs  scan.rs  time.rs
pi_pico/src/: main.rs
pi_zero/: Cargo.toml
pi_zero/examples/: blinky.rs  chip_info.rs  connect.rs  led.rs
rpi_zero/.cargo/: config
rpi_zero/src/: main.rs
stm32f3-discovery/examples/: connect.rs  led.rs
stm32f4-discovery/: Cargo.toml
stm32f4-discovery/.cargo/: config
stm32f4-discovery/examples/: blinky.rs  chip_info.rs  connect.rs
stm32f4-discovery/src/: main.rs
