[package]
name = "stm32test"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.0"
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7.0", features = ["device"] }
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
# Replace stm32f303xc with your target chip, see next section for more info
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "rt", "stm32f303xc"] }
atwinc1500 = "0.1.0"
